[gd_scene load_steps=7 format=3 uid="uid://bx3kup2vyqlma"]

[ext_resource type="Theme" uid="uid://evv5alve252b" path="res://main/theme/theme.tres" id="1_4r6vn"]
[ext_resource type="Script" path="res://main/battle/ui/choice_menu/choice_menu.gd" id="2_wme8r"]
[ext_resource type="Texture2D" uid="uid://bbyv34w3mao51" path="res://main/battle/ui/choice_menu/arrow.png" id="3_6p17v"]
[ext_resource type="PackedScene" uid="uid://7ffg50pelcx6" path="res://main/battle/ui/choice_menu/choice_button/choice_button.tscn" id="3_e4tvf"]
[ext_resource type="Texture2D" uid="uid://dcmjubte1kcli" path="res://main/battle/ui/choice_menu/mini_blocker.png" id="4_8fk3a"]
[ext_resource type="PackedScene" uid="uid://cvscxguxb7jke" path="res://main/battle/ui/colored_text/colored_text.tscn" id="5_jmnp4"]

[node name="ChoiceMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4r6vn")
script = ExtResource("2_wme8r")

[node name="ChoiceContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 14.0
offset_right = 34.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="ChoiceButton" parent="ChoiceContainer" instance=ExtResource("3_e4tvf")]
layout_mode = 2

[node name="ChoiceButton2" parent="ChoiceContainer" instance=ExtResource("3_e4tvf")]
layout_mode = 2

[node name="ChoiceButton3" parent="ChoiceContainer" instance=ExtResource("3_e4tvf")]
layout_mode = 2

[node name="ChoiceButton4" parent="ChoiceContainer" instance=ExtResource("3_e4tvf")]
layout_mode = 2

[node name="ChoiceButton5" parent="ChoiceContainer" instance=ExtResource("3_e4tvf")]
layout_mode = 2

[node name="Blocker1" type="ColorRect" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 0
offset_left = -8.0
offset_top = 45.0
offset_right = 24.0
offset_bottom = 57.0
color = Color(0, 0, 0, 1)

[node name="Blocker2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 45.0
offset_right = 71.0
offset_bottom = 57.0
color = Color(0, 0, 0, 1)

[node name="Blocker3" type="ColorRect" parent="."]
custom_minimum_size = Vector2(37, 6)
layout_mode = 0
offset_left = 23.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 46.0
color = Color(0, 0, 0, 1)

[node name="RightMore" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 48.0
offset_right = 63.0
offset_bottom = 53.0
texture = ExtResource("3_6p17v")
stretch_mode = 2

[node name="LeftMore" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 48.0
offset_right = 26.0
offset_bottom = 53.0
scale = Vector2(-1, 1)
texture = ExtResource("3_6p17v")
stretch_mode = 2

[node name="MiniBlockerLeft" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 40.0
offset_right = 26.0
offset_bottom = 45.0
scale = Vector2(-1, 1)
texture = ExtResource("4_8fk3a")
stretch_mode = 2

[node name="MiniBlockerRight" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 40.0
offset_right = 63.0
offset_bottom = 45.0
texture = ExtResource("4_8fk3a")
stretch_mode = 2

[node name="ChoiceLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(37, 0)
layout_mode = 0
offset_left = 23.0
offset_top = 41.0
offset_right = 60.0
offset_bottom = 46.0
text = "kill"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 3
ellipsis_char = "."

[node name="CostAmountLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(22, 0)
layout_mode = 0
offset_left = 21.0
offset_top = 58.0
offset_right = 43.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.0196078, 0.0784314, 0.133333, 1)
text = "count"
horizontal_alignment = 2

[node name="CostColoredText" parent="." instance=ExtResource("5_jmnp4")]
unique_name_in_owner = true
position = Vector2(42, 54)

[node name="Center" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(27, 46)
